syntax = "proto3";
package com.vima.gateway;

import "google/protobuf/timestamp.proto";
import "Shared.proto";

message RatingAccommodationRequest{
  int32 value = 1;
  string accommodationId =2;
  uint64 guestId = 3;
}

message RatingAccommodationResponse{
  uint64 id = 1;
  int32 value = 2;
  string accommodationId = 3;
  uint64 guestId = 4;
  google.protobuf.Timestamp date = 5;
}

message ID{
  uint64 id = 1;
}

service RatingAccommodationService{
  rpc create(RatingAccommodationRequest) returns (RatingAccommodationResponse);
  rpc delete(ID) returns (TextMessage);
}